--- a/PoC.ipynb
+++ b/PoC.ipynb
@@ -37,8 +37,8 @@
    "id": "7bdbf6f6-64e3-4023-b66a-6cfdf9703454",
    "metadata": {},
    "source": [
-    "Dans dans le contexte de l'industrie du futur où les systèmes sont de plus en plus complexes, les systèmes automatisés de production, tels que les lignes de convoyage ou les systèmes de tri sont largement modélisés comme des Systèmes à Événements Discrets (SED). Dans ce type de systèmes, l’évolution dynamique est régi par des événements discrets (changements d’état de capteurs ou commutations d’actionneurs), plutôt que par des lois continues. Dans une environnement concurrentiel marqué par les exigences de disponibilité, de sécurité et de qualité, la capacité à détecter et diagnostiquer rapidement les défauts est devenue un enjeu majeur. Un défaut non détecté peut entraîner des arrêts non planifiés, des pertes économiques importantes, voire des situations dangereuses pour les opérateurs. Les approches classiques de diagnostic des SED (basée sur les modèles et ou basée sur la connaissance) présentent des limites majeures que sont : la nécessité d’un modèle analytique précis et complet du système, coûts élevés de développement et de maintenance, la difficulté à mettre à jour de nouveaux défauts, dépendance de la disponibilité d’experts, etc.\n",
-    "Avec l’essor de l’industrie 4.0 et la disponibilité croissante des données issues des capteurs industriels, les approches basees sur les données et en particulier celles basées sur le Machine Learning apparaissent comme une alternative prometteuse. Parmi elles, les réseaux de neurones récurrents, et plus spécifiquement les Long Short-Term Memory (LSTM), sont particulièrement adaptés à l’analyse de données temporelles et séquentielles.\n",
+    "Dans dans le contexte de l'industrie du futur où les systèmes sont de plus en plus complexes, les systèmes automatisés de production, tels que les lignes de convoyage ou les systèmes de tri sont largement modélisés comme des Systèmes à Événements Discrets (SED). Dans ce type de systèmes, l’évolution dynamique est régi par des événements discrets (changements d’état de capteurs ou commutations d’actionneurs), plutôt que par des lois continues. Dans un environnement concurrentiel marqué par les exigences de disponibilité, de sécurité et de qualité, la capacité à détecter et diagnostiquer rapidement les défauts est devenue un enjeu majeur. Un défaut non détecté peut entraîner des arrêts non planifiés, des pertes économiques importantes, voire des situations dangereuses pour les opérateurs. Les approches classiques de diagnostic des SED (basée sur les modèles et ou basée sur la connaissance) présentent des limites majeures que sont : la nécessité d’un modèle analytique précis et complet du système, coûts élevés de développement et de maintenance, la difficulté à mettre à jour de nouveaux défauts, dépendance de la disponibilité d’experts, etc.\n",
+    "Avec l’essor de l’industrie 4.0 et la disponibilité croissante des données issues des capteurs industriels, les approches basées sur les données et en particulier celles basées sur le Machine Learning apparaissent comme une alternative prometteuse. Parmi elles, les réseaux de neurones récurrents, et plus spécifiquement les Long Short-Term Memory (LSTM), sont particulièrement adaptés à l’analyse de données temporelles et séquentielles.\n",
     "C’est dans ce contexte que s’inscrit l’approche proposée par <B>Saddem et Baptiste (2022)</b> (<a href = \"./Saddem et al. - 2022 - Machine learning-based approach for online fault Diagnosis of Discrete Event Sy.pdf\"><b><i> Machine learning-based approach for online fault Diagnosis of Discrete Event System</i></b></a>), qui combine une modélisation des SED avec des techniques d’apprentissage automatique afin de réaliser un <b>diagnostic de défauts en ligne</b>, capable de distinguer plusieurs types de fautes à partir de séquences temporelles de signaux discrets. Notre objectif est de réaliser une preuve de concepts des travaux realisés par les auteurs de cet article, par une démonstration de la faisabilité ou non et de la cohérence méthodiologique. Pour cela, nous avons reparti notre travail en plusieurs parties: Premièrement, nous commençons par la modélisation du problème; deuxièmement, nous faisons l'acquisition des données; Troisiement, la préparation des données pour l'algorithme de RNN - LSTM; quatrièment, l'entrainement et la validation de l'algorithme et en fin, une évaluation des performances. "
    ]
   },
@@ -55,7 +55,7 @@
    "id": "9858c548-b88c-47e3-8129-19637851f20c",
    "metadata": {},
    "source": [
-    "Le problème a été modélise ainsi qu'il suit : <br>\n",
+    "Le problème a été modélisé ainsi qu'il suit : <br>\n",
     "Pour être cohérent avec l’article, nous avons considéré un système automatisé de production simplifié. Il s'agir d'un système de convoyage constitué de : \n",
     "* Deux capteurs binaires (Pour détecter la présence d'une pièce à l'entrée et à la sortie) nommés \"capteur_1\" et \"capteur_2\"\n",
     "* Un actionneur binaire représentant le moteur du convoyeur nommé \"moteur\" <br>\n",
@@ -82,7 +82,7 @@
    "id": "b9f26653-fb97-4ec5-bf59-2fd2c534244e",
    "metadata": {},
    "source": [
-    "La phase d'acquision des donnees est crutiale car elles representent la base de toute la demarche. Des donnees biaisees entraineraient des mauvais diagnostic et par consequent l'inefficacite du modele. "
+    "La phase d'acquision des donnees est crutiale car elles representent la base de toute la demarche. Des données biaisées entraineraient des mauvais diagnostics et par consequent l'inefficacité du modèle. "
    ]
   },
   {
@@ -91,7 +91,7 @@
    "metadata": {},
    "source": [
     "Pour des questions de clarté dans le présent travail, nous avons développé l'étape d'acquisition des données dans le fichier dont le lien suit : <a href = \"./jeu_de_donnees.ipynb\"><b><i> Jeux de données brutes générées par le simulateur de SED.</i></b></a> <br>\n",
-    "Comme livrable, l'étape d'acquision des données nous fournit un fichier CSV contenant les données qui serviront a l'étape suivante. \n",
+    "Comme livrable, l'étape d'acquision des données nous fournit un fichier CSV contenant les données qui serviront à l'étape suivante. \n",
     "Les types de defauts simulés sont les suivants :<br>\n",
     "|Classe|Type de defaut| Description|\n",
     "|------|--------------|------------|\n",
@@ -127,7 +127,7 @@
    "metadata": {},
    "source": [
     "Cette étape permet d'avoir : \n",
-    "* Les données resopectant le format de l'article\n",
+    "* Les données respectant le format de l'article\n",
     "* La répartition des données en données d'entrainement, de test et de validation. "
    ]
   },
@@ -144,9 +144,9 @@
    "id": "198d0e32-3a30-4603-8075-7ec732872bf5",
    "metadata": {},
    "source": [
-    "Le modèle de l'algorithme que nous avons réalisé fidèlement à l'article a été développé dans le fichier dont le lien suit : <a href = \"./ModeleML.ipynb\"><b><i> Modele de l'algorithme de RNN - LSTM développé pour le diagnostic des défaillances des SED. </i></b></a> <br> \n",
+    "Le modèle de l'algorithme que nous avons réalisé fidèlement à l'article a été développé dans le fichier dont le lien suit : <a href = \"./ModeleML.ipynb\"><b><i> Modèle de l'algorithme de RNN - LSTM développé pour le diagnostic des défaillances des SED. </i></b></a> <br> \n",
     "\n",
-    "Ce modèle prend en entrée la séquence temporelle obtenu à la section précédente et renvoie en sortie une distribution de probabilité d'appartenance du système à une classe d'état (normal ou défaillant)."
+    "Ce modèle prend en entrée la séquence temporelle obtenue à la section précédente et renvoie en sortie une distribution de probabilité d'appartenance du système à une classe d'état (normal ou défaillant)."
    ]
   },
   {
@@ -181,6 +181,7 @@
    "id": "9ef4e3c9-51ac-4eea-8707-06e72a0b624f",
    "metadata": {},
    "source": [
+    "Les résultats obtenus a partir du <a href = \"./ModeleML.ipynb\"><b><i> Modèle de l'algorithme de RNN - LSTM développé pour le diagnostic des défaillances des SED</i></b></a>  sont consignés dans le tableau suivant : <br>\n",
     "|Metrique|Article|Preuve de concept|\n",
     "|--------|-------|-----------------|\n",
     "|Test accuracy| environ 70%|99.13%|\n",
