--- a/PoC.ipynb
+++ b/PoC.ipynb
@@ -182,12 +182,13 @@
    "metadata": {},
    "source": [
     "Les résultats obtenus a partir du <a href = \"./ModeleML.ipynb\"><b><i> Modèle de l'algorithme de RNN - LSTM développé pour le diagnostic des défaillances des SED</i></b></a>  sont consignés dans le tableau suivant : <br>\n",
+    "\n",
     "|Metrique|Article|Preuve de concept|\n",
     "|--------|-------|-----------------|\n",
     "|Test accuracy| environ 70%|99.13%|\n",
     "|Val accuracy|environ 70%|96.96%\n",
     "Train accuracy|97.10% | 98.70%|\n",
-    "|Convergence| ~100 epochs |48 epochs|"
+    "|Convergence|100 epochs|48 epochs|"
    ]
   },
   {
